demux: hls: check for quotes

refs #23187

(cherry picked from commit 74459499e1fc49ed6b351d16d91cde1d1e273dee)